# Salvage

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
data/: signatures.json
docs/: design.md  filesystem.md  filetypes.md  partition-sector.md
include/salvage/: salvage.h
src/cli/: cmd.h  cmd_list.c  cmd_recover.c  cmd_scan.c  main.c
src/core/: recover.c  recover.h  result.c  result.h  scanner.c  scanner.h
src/device/: device.c  device.h  device_linux.c  device_win.c
src/fs/exfat/: exfat.h  exfat_boot.c  exfat_data.c  exfat_dir.c
src/fs/fat/: fat.h  fat_boot.c  fat_data.c  fat_dir.c
src/fs/ntfs/: attribute.c  boot.c  data_run.c  mft.c  ntfs.h
src/partition/: detect.c  gpt.c  mbr.c  partition.h
src/signature/: database.c  matcher.c  signature.h
src/utils/: endian.h  log.c  log.h  progress.c  progress.h  str.c  str.h  time.c  time.h
tests/: CMakeLists.txt  e2e_fat32.py  e2e_ntfs.py  test_endian.c  test_fat.c  test_full.c  test_ntfs.c  test_partition.c  test_scanner.c  test_signature.c
